# azs_local_server_cxx

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  DockerFile  Dockerfile  DockerfileLinux  azs.db  main.cpp
include/: azs.h  controller.h  core.h  local_data.h  model.h  users.h  users_controller.h  view.h  web_tehnology.h
site/: configuration.html  configurationazs.html  erorrdb.html  login.html  serv.html  settingsazs.html  settingsdb.html  settingsdberror.html
site/css/: admin.css  configuration.css  login.css  main.css  style.css  user.css
site/js/: configure.js  core.js  menu.js  post.js  unit.js
src/: controller.cpp  local_data.cpp  model.cpp  users.cpp  view.cpp  web_tehnology.cpp
