cmake_minimum_required(VERSION 3.1)
project(azs_local_server)
IF (WIN32)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/site DESTINATION ${CMAKE_BINARY_DIR}/bin/${CMAKE_BUILD_TYPE})
ELSE()
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/site DESTINATION ${CMAKE_BINARY_DIR}/bin)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/DockerfileLinux DESTINATION ${CMAKE_BINARY_DIR})
file(RENAME ${CMAKE_BINARY_DIR}/DockerfileLinux ${CMAKE_BINARY_DIR}/Dockerfile)
ENDIF()
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
add_subdirectory(Crow)
link_directories(Crow/include)
add_executable(${PROJECT_NAME} main.cpp)
target_link_libraries(${PROJECT_NAME} Crow)